[gd_scene load_steps=13 format=2]

[ext_resource path="res://Objects/dirt.material" type="Material" id=1]
[ext_resource path="res://Objects/wood.material" type="Material" id=2]
[ext_resource path="res://Scenes/jarst_solar_panel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Hexagons/hexagonal_collision_shape.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/grass.material" type="Material" id=5]
[ext_resource path="res://Scenes/Hexagons/solar.gd" type="Script" id=6]
[ext_resource path="res://Objects/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="ArrayMesh" id=1]
resource_name = "grass"
surfaces/0 = {
"aabb": AABB( -0.5, 0, -0.57735, 1, 0.2, 1.1547 ),
"array_data": PoolByteArray( 0, 0, 0, 191, 0, 0, 0, 0, 58, 205, 147, 190, 0, 129, 0, 0, 129, 0, 0, 127, 235, 76, 46, 201, 0, 0, 0, 191, 0, 0, 0, 0, 58, 205, 147, 62, 0, 129, 0, 0, 129, 0, 0, 127, 235, 76, 46, 74, 192, 236, 6, 170, 0, 0, 0, 0, 58, 205, 19, 191, 0, 129, 0, 0, 129, 0, 0, 127, 0, 0, 110, 205, 92, 254, 23, 42, 0, 0, 0, 0, 58, 205, 19, 63, 0, 129, 0, 0, 129, 0, 0, 127, 0, 0, 238, 77, 0, 0, 0, 63, 0, 0, 0, 0, 58, 205, 147, 190, 0, 129, 0, 0, 129, 0, 0, 127, 235, 204, 46, 201, 0, 0, 0, 63, 0, 0, 0, 0, 58, 205, 147, 62, 0, 129, 0, 0, 129, 0, 0, 127, 235, 204, 46, 74, 0, 0, 0, 191, 0, 0, 0, 0, 58, 205, 147, 190, 193, 0, 147, 0, 147, 0, 63, 127, 174, 73, 0, 60, 192, 236, 6, 170, 0, 0, 0, 0, 58, 205, 19, 191, 193, 0, 147, 0, 147, 0, 63, 127, 174, 201, 0, 60, 0, 0, 0, 191, 205, 204, 204, 61, 58, 205, 147, 190, 193, 0, 147, 0, 147, 0, 63, 127, 174, 73, 223, 193, 192, 236, 6, 170, 205, 204, 204, 61, 58, 205, 19, 191, 193, 0, 147, 0, 147, 0, 63, 127, 174, 201, 223, 193, 0, 0, 0, 191, 205, 204, 204, 61, 58, 205, 147, 62, 129, 0, 0, 0, 0, 0, 127, 127, 174, 73, 223, 193, 0, 0, 0, 191, 0, 0, 0, 0, 58, 205, 147, 62, 129, 0, 0, 0, 0, 0, 127, 127, 174, 73, 0, 60, 0, 0, 0, 191, 205, 204, 204, 61, 58, 205, 147, 190, 129, 0, 0, 0, 0, 0, 127, 127, 174, 201, 223, 193, 0, 0, 0, 191, 0, 0, 0, 0, 58, 205, 147, 190, 129, 0, 0, 0, 0, 0, 127, 127, 174, 201, 0, 60, 92, 254, 23, 42, 0, 0, 0, 0, 58, 205, 19, 63, 193, 0, 109, 0, 109, 0, 63, 127, 174, 73, 0, 60, 0, 0, 0, 191, 0, 0, 0, 0, 58, 205, 147, 62, 193, 0, 109, 0, 109, 0, 63, 127, 174, 201, 0, 60, 92, 254, 23, 42, 205, 204, 204, 61, 58, 205, 19, 63, 193, 0, 109, 0, 109, 0, 63, 127, 174, 73, 223, 193, 0, 0, 0, 191, 205, 204, 204, 61, 58, 205, 147, 62, 193, 0, 109, 0, 109, 0, 63, 127, 174, 201, 223, 193, 0, 0, 0, 63, 0, 0, 0, 0, 58, 205, 147, 62, 63, 0, 109, 0, 109, 0, 193, 127, 174, 73, 0, 60, 92, 254, 23, 42, 0, 0, 0, 0, 58, 205, 19, 63, 63, 0, 109, 0, 109, 0, 193, 127, 174, 201, 0, 60, 0, 0, 0, 63, 205, 204, 204, 61, 58, 205, 147, 62, 63, 0, 109, 0, 109, 0, 193, 127, 174, 73, 223, 193, 92, 254, 23, 42, 205, 204, 204, 61, 58, 205, 19, 63, 63, 0, 109, 0, 109, 0, 193, 127, 174, 201, 223, 193, 0, 0, 0, 63, 0, 0, 0, 0, 58, 205, 147, 62, 127, 0, 0, 0, 0, 0, 129, 127, 174, 201, 0, 60, 0, 0, 0, 63, 205, 204, 204, 61, 58, 205, 147, 62, 127, 0, 0, 0, 0, 0, 129, 127, 174, 201, 223, 193, 0, 0, 0, 63, 0, 0, 0, 0, 58, 205, 147, 190, 127, 0, 0, 0, 0, 0, 129, 127, 174, 73, 0, 60, 0, 0, 0, 63, 205, 204, 204, 61, 58, 205, 147, 190, 127, 0, 0, 0, 0, 0, 129, 127, 174, 73, 223, 193, 192, 236, 6, 170, 0, 0, 0, 0, 58, 205, 19, 191, 63, 0, 147, 0, 147, 0, 193, 127, 174, 73, 0, 60, 0, 0, 0, 63, 0, 0, 0, 0, 58, 205, 147, 190, 63, 0, 147, 0, 147, 0, 193, 127, 174, 201, 0, 60, 192, 236, 6, 170, 205, 204, 204, 61, 58, 205, 19, 191, 63, 0, 147, 0, 147, 0, 193, 127, 174, 73, 223, 193, 0, 0, 0, 63, 205, 204, 204, 61, 58, 205, 147, 190, 63, 0, 147, 0, 147, 0, 193, 127, 174, 201, 223, 193, 0, 0, 0, 191, 205, 204, 76, 62, 58, 205, 147, 190, 0, 127, 0, 0, 0, 0, 0, 127, 235, 204, 46, 201, 192, 236, 6, 170, 205, 204, 76, 62, 58, 205, 19, 191, 0, 127, 0, 0, 0, 0, 0, 127, 0, 0, 110, 205, 0, 0, 0, 191, 205, 204, 76, 62, 58, 205, 147, 62, 0, 127, 0, 0, 0, 0, 0, 127, 235, 204, 46, 74, 92, 254, 23, 42, 205, 204, 76, 62, 58, 205, 19, 63, 0, 127, 0, 0, 0, 0, 0, 127, 0, 0, 238, 77, 0, 0, 0, 63, 205, 204, 76, 62, 58, 205, 147, 190, 0, 127, 0, 0, 0, 0, 0, 127, 235, 76, 46, 201, 0, 0, 0, 63, 205, 204, 76, 62, 58, 205, 147, 62, 0, 127, 0, 0, 0, 0, 0, 127, 235, 76, 46, 74, 0, 0, 0, 63, 205, 204, 76, 62, 58, 205, 147, 62, 127, 0, 0, 0, 0, 0, 0, 127, 174, 201, 223, 198, 0, 0, 0, 63, 205, 204, 76, 62, 58, 205, 147, 190, 127, 0, 0, 0, 0, 0, 0, 127, 174, 73, 223, 198, 192, 236, 6, 170, 205, 204, 76, 62, 58, 205, 19, 191, 63, 0, 147, 0, 0, 0, 0, 127, 174, 73, 223, 198, 0, 0, 0, 63, 205, 204, 76, 62, 58, 205, 147, 190, 63, 0, 147, 0, 0, 0, 0, 127, 174, 201, 223, 198, 0, 0, 0, 63, 205, 204, 76, 62, 58, 205, 147, 62, 63, 0, 109, 0, 0, 0, 0, 127, 174, 73, 223, 198, 92, 254, 23, 42, 205, 204, 76, 62, 58, 205, 19, 63, 63, 0, 109, 0, 0, 0, 0, 127, 174, 201, 223, 198, 92, 254, 23, 42, 205, 204, 76, 62, 58, 205, 19, 63, 193, 0, 109, 0, 0, 0, 0, 127, 174, 73, 223, 198, 0, 0, 0, 191, 205, 204, 76, 62, 58, 205, 147, 62, 193, 0, 109, 0, 0, 0, 0, 127, 174, 201, 223, 198, 0, 0, 0, 191, 205, 204, 76, 62, 58, 205, 147, 62, 129, 0, 0, 0, 0, 0, 0, 127, 174, 73, 223, 198, 0, 0, 0, 191, 205, 204, 76, 62, 58, 205, 147, 190, 129, 0, 0, 0, 0, 0, 0, 127, 174, 201, 223, 198, 0, 0, 0, 191, 205, 204, 76, 62, 58, 205, 147, 190, 193, 0, 147, 0, 0, 0, 0, 127, 174, 73, 223, 198, 192, 236, 6, 170, 205, 204, 76, 62, 58, 205, 19, 191, 193, 0, 147, 0, 0, 0, 0, 127, 174, 201, 223, 198 ),
"array_index_data": PoolByteArray( 2, 0, 0, 0, 1, 0, 1, 0, 3, 0, 2, 0, 3, 0, 4, 0, 2, 0, 3, 0, 5, 0, 4, 0, 8, 0, 6, 0, 7, 0, 7, 0, 9, 0, 8, 0, 12, 0, 10, 0, 11, 0, 11, 0, 13, 0, 12, 0, 16, 0, 14, 0, 15, 0, 15, 0, 17, 0, 16, 0, 20, 0, 18, 0, 19, 0, 19, 0, 21, 0, 20, 0, 24, 0, 22, 0, 23, 0, 23, 0, 25, 0, 24, 0, 28, 0, 26, 0, 27, 0, 27, 0, 29, 0, 28, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 48,
"material": ExtResource( 1 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 48
}
surfaces/1 = {
"aabb": AABB( -0.5, 0, -0.57735, 1, 0.2, 1.1547 ),
"array_data": PoolByteArray( 0, 0, 0, 191, 0, 0, 0, 0, 58, 205, 147, 190, 0, 129, 0, 0, 0, 0, 0, 127, 235, 76, 46, 201, 0, 0, 0, 191, 0, 0, 0, 0, 58, 205, 147, 62, 0, 129, 0, 0, 0, 0, 0, 127, 235, 76, 46, 74, 192, 236, 6, 170, 0, 0, 0, 0, 58, 205, 19, 191, 0, 129, 0, 0, 0, 0, 0, 127, 0, 0, 110, 205, 92, 254, 23, 42, 0, 0, 0, 0, 58, 205, 19, 63, 0, 129, 0, 0, 0, 0, 0, 127, 0, 0, 238, 77, 0, 0, 0, 63, 0, 0, 0, 0, 58, 205, 147, 190, 0, 129, 0, 0, 0, 0, 0, 127, 235, 204, 46, 201, 0, 0, 0, 63, 0, 0, 0, 0, 58, 205, 147, 62, 0, 129, 0, 0, 0, 0, 0, 127, 235, 204, 46, 74, 0, 0, 0, 191, 0, 0, 0, 0, 58, 205, 147, 190, 193, 0, 147, 0, 0, 0, 0, 127, 174, 73, 0, 60, 192, 236, 6, 170, 0, 0, 0, 0, 58, 205, 19, 191, 193, 0, 147, 0, 0, 0, 0, 127, 174, 201, 0, 60, 0, 0, 0, 191, 205, 204, 204, 61, 58, 205, 147, 190, 193, 0, 147, 0, 147, 0, 63, 127, 174, 73, 223, 193, 192, 236, 6, 170, 205, 204, 204, 61, 58, 205, 19, 191, 193, 0, 147, 0, 147, 0, 63, 127, 174, 201, 223, 193, 0, 0, 0, 191, 205, 204, 204, 61, 58, 205, 147, 62, 129, 0, 0, 0, 0, 0, 127, 127, 174, 73, 223, 193, 0, 0, 0, 191, 0, 0, 0, 0, 58, 205, 147, 62, 129, 0, 0, 0, 0, 0, 0, 127, 174, 73, 0, 60, 0, 0, 0, 191, 205, 204, 204, 61, 58, 205, 147, 190, 129, 0, 0, 0, 0, 0, 127, 127, 174, 201, 223, 193, 0, 0, 0, 191, 0, 0, 0, 0, 58, 205, 147, 190, 129, 0, 0, 0, 0, 0, 0, 127, 174, 201, 0, 60, 92, 254, 23, 42, 0, 0, 0, 0, 58, 205, 19, 63, 193, 0, 109, 0, 0, 0, 0, 127, 174, 73, 0, 60, 0, 0, 0, 191, 0, 0, 0, 0, 58, 205, 147, 62, 193, 0, 109, 0, 0, 0, 0, 127, 174, 201, 0, 60, 92, 254, 23, 42, 205, 204, 204, 61, 58, 205, 19, 63, 193, 0, 109, 0, 109, 0, 63, 127, 174, 73, 223, 193, 0, 0, 0, 191, 205, 204, 204, 61, 58, 205, 147, 62, 193, 0, 109, 0, 109, 0, 63, 127, 174, 201, 223, 193, 0, 0, 0, 63, 0, 0, 0, 0, 58, 205, 147, 62, 63, 0, 109, 0, 0, 0, 0, 127, 174, 73, 0, 60, 92, 254, 23, 42, 0, 0, 0, 0, 58, 205, 19, 63, 63, 0, 109, 0, 0, 0, 0, 127, 174, 201, 0, 60, 0, 0, 0, 63, 205, 204, 204, 61, 58, 205, 147, 62, 63, 0, 109, 0, 109, 0, 193, 127, 174, 73, 223, 193, 92, 254, 23, 42, 205, 204, 204, 61, 58, 205, 19, 63, 63, 0, 109, 0, 109, 0, 193, 127, 174, 201, 223, 193, 0, 0, 0, 63, 0, 0, 0, 0, 58, 205, 147, 62, 127, 0, 0, 0, 0, 0, 0, 127, 174, 201, 0, 60, 0, 0, 0, 63, 205, 204, 204, 61, 58, 205, 147, 62, 127, 0, 0, 0, 0, 0, 129, 127, 174, 201, 223, 193, 0, 0, 0, 63, 0, 0, 0, 0, 58, 205, 147, 190, 127, 0, 0, 0, 0, 0, 0, 127, 174, 73, 0, 60, 0, 0, 0, 63, 205, 204, 204, 61, 58, 205, 147, 190, 127, 0, 0, 0, 0, 0, 129, 127, 174, 73, 223, 193, 192, 236, 6, 170, 0, 0, 0, 0, 58, 205, 19, 191, 63, 0, 147, 0, 0, 0, 0, 127, 174, 73, 0, 60, 0, 0, 0, 63, 0, 0, 0, 0, 58, 205, 147, 190, 63, 0, 147, 0, 0, 0, 0, 127, 174, 201, 0, 60, 192, 236, 6, 170, 205, 204, 204, 61, 58, 205, 19, 191, 63, 0, 147, 0, 147, 0, 193, 127, 174, 73, 223, 193, 0, 0, 0, 63, 205, 204, 204, 61, 58, 205, 147, 190, 63, 0, 147, 0, 147, 0, 193, 127, 174, 201, 223, 193, 0, 0, 0, 191, 205, 204, 76, 62, 58, 205, 147, 190, 0, 127, 0, 0, 127, 0, 0, 127, 235, 204, 46, 201, 192, 236, 6, 170, 205, 204, 76, 62, 58, 205, 19, 191, 0, 127, 0, 0, 127, 0, 0, 127, 0, 0, 110, 205, 0, 0, 0, 191, 205, 204, 76, 62, 58, 205, 147, 62, 0, 127, 0, 0, 127, 0, 0, 127, 235, 204, 46, 74, 92, 254, 23, 42, 205, 204, 76, 62, 58, 205, 19, 63, 0, 127, 0, 0, 127, 0, 0, 127, 0, 0, 238, 77, 0, 0, 0, 63, 205, 204, 76, 62, 58, 205, 147, 190, 0, 127, 0, 0, 127, 0, 0, 127, 235, 76, 46, 201, 0, 0, 0, 63, 205, 204, 76, 62, 58, 205, 147, 62, 0, 127, 0, 0, 127, 0, 0, 127, 235, 76, 46, 74, 0, 0, 0, 63, 205, 204, 76, 62, 58, 205, 147, 62, 127, 0, 0, 0, 0, 0, 129, 127, 174, 201, 223, 198, 0, 0, 0, 63, 205, 204, 76, 62, 58, 205, 147, 190, 127, 0, 0, 0, 0, 0, 129, 127, 174, 73, 223, 198, 192, 236, 6, 170, 205, 204, 76, 62, 58, 205, 19, 191, 63, 0, 147, 0, 147, 0, 193, 127, 174, 73, 223, 198, 0, 0, 0, 63, 205, 204, 76, 62, 58, 205, 147, 190, 63, 0, 147, 0, 147, 0, 193, 127, 174, 201, 223, 198, 0, 0, 0, 63, 205, 204, 76, 62, 58, 205, 147, 62, 63, 0, 109, 0, 109, 0, 193, 127, 174, 73, 223, 198, 92, 254, 23, 42, 205, 204, 76, 62, 58, 205, 19, 63, 63, 0, 109, 0, 109, 0, 193, 127, 174, 201, 223, 198, 92, 254, 23, 42, 205, 204, 76, 62, 58, 205, 19, 63, 193, 0, 109, 0, 109, 0, 63, 127, 174, 73, 223, 198, 0, 0, 0, 191, 205, 204, 76, 62, 58, 205, 147, 62, 193, 0, 109, 0, 109, 0, 63, 127, 174, 201, 223, 198, 0, 0, 0, 191, 205, 204, 76, 62, 58, 205, 147, 62, 129, 0, 0, 0, 0, 0, 127, 127, 174, 73, 223, 198, 0, 0, 0, 191, 205, 204, 76, 62, 58, 205, 147, 190, 129, 0, 0, 0, 0, 0, 127, 127, 174, 201, 223, 198, 0, 0, 0, 191, 205, 204, 76, 62, 58, 205, 147, 190, 193, 0, 147, 0, 147, 0, 63, 127, 174, 73, 223, 198, 192, 236, 6, 170, 205, 204, 76, 62, 58, 205, 19, 191, 193, 0, 147, 0, 147, 0, 63, 127, 174, 201, 223, 198 ),
"array_index_data": PoolByteArray( 32, 0, 30, 0, 31, 0, 31, 0, 33, 0, 32, 0, 31, 0, 34, 0, 33, 0, 34, 0, 35, 0, 33, 0, 25, 0, 23, 0, 36, 0, 36, 0, 37, 0, 25, 0, 38, 0, 28, 0, 29, 0, 29, 0, 39, 0, 38, 0, 40, 0, 20, 0, 21, 0, 21, 0, 41, 0, 40, 0, 42, 0, 16, 0, 17, 0, 17, 0, 43, 0, 42, 0, 45, 0, 44, 0, 10, 0, 10, 0, 12, 0, 45, 0, 46, 0, 8, 0, 9, 0, 9, 0, 47, 0, 46, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 48,
"material": ExtResource( 5 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 48
}

[sub_resource type="ArrayMesh" id=2]
resource_name = "fence"
surfaces/0 = {
"aabb": AABB( -0.225, 0, -0.025, 0.45, 0.1, 0.05 ),
"array_data": PoolByteArray( 51, 51, 51, 190, 0, 0, 0, 0, 169, 19, 208, 37, 0, 0, 129, 0, 129, 0, 0, 127, 227, 70, 0, 60, 51, 51, 51, 62, 0, 0, 0, 0, 169, 19, 80, 38, 0, 0, 129, 0, 129, 0, 0, 127, 227, 198, 0, 60, 51, 51, 51, 190, 154, 153, 153, 61, 169, 19, 208, 37, 0, 0, 129, 0, 129, 0, 0, 127, 227, 70, 207, 191, 51, 51, 51, 62, 154, 153, 153, 61, 169, 19, 80, 38, 0, 0, 129, 0, 129, 0, 0, 127, 227, 198, 207, 191, 51, 51, 51, 190, 154, 153, 153, 61, 169, 19, 208, 37, 0, 0, 127, 0, 129, 0, 0, 129, 227, 70, 207, 191, 51, 51, 51, 62, 0, 0, 0, 0, 169, 19, 80, 38, 0, 0, 127, 0, 129, 0, 0, 129, 227, 198, 0, 60, 51, 51, 51, 190, 0, 0, 0, 0, 169, 19, 208, 37, 0, 0, 127, 0, 129, 0, 0, 129, 227, 70, 0, 60, 51, 51, 51, 62, 154, 153, 153, 61, 169, 19, 80, 38, 0, 0, 127, 0, 129, 0, 0, 129, 227, 198, 207, 191, 51, 51, 51, 62, 205, 204, 204, 61, 205, 204, 204, 60, 129, 0, 0, 0, 0, 0, 0, 127, 223, 59, 223, 193, 51, 51, 51, 62, 132, 13, 143, 37, 205, 204, 204, 60, 129, 0, 0, 0, 0, 0, 0, 127, 223, 59, 0, 60, 51, 51, 51, 62, 205, 204, 204, 61, 205, 204, 204, 188, 129, 0, 0, 0, 0, 0, 0, 127, 223, 187, 223, 193, 51, 51, 51, 62, 0, 0, 0, 0, 169, 19, 80, 38, 129, 0, 0, 0, 0, 0, 0, 127, 0, 0, 0, 60, 51, 51, 51, 62, 132, 13, 143, 37, 205, 204, 204, 188, 129, 0, 0, 0, 0, 0, 0, 127, 223, 187, 0, 60, 102, 102, 102, 62, 132, 13, 143, 37, 205, 204, 204, 60, 0, 0, 127, 0, 0, 0, 0, 127, 109, 72, 0, 60, 51, 51, 51, 62, 132, 13, 143, 37, 205, 204, 204, 60, 0, 0, 127, 0, 0, 0, 0, 127, 227, 70, 0, 60, 102, 102, 102, 62, 205, 204, 204, 61, 205, 204, 204, 60, 0, 0, 127, 0, 0, 0, 0, 127, 109, 72, 223, 193, 51, 51, 51, 62, 205, 204, 204, 61, 205, 204, 204, 60, 0, 0, 127, 0, 0, 0, 0, 127, 227, 70, 223, 193, 51, 51, 51, 62, 132, 13, 143, 37, 205, 204, 204, 188, 0, 129, 0, 0, 0, 0, 0, 127, 227, 198, 8, 36, 51, 51, 51, 62, 0, 0, 0, 0, 169, 19, 80, 38, 0, 129, 0, 0, 0, 0, 0, 127, 227, 198, 0, 60, 102, 102, 102, 62, 132, 13, 143, 37, 205, 204, 204, 188, 0, 129, 0, 0, 0, 0, 0, 127, 109, 200, 8, 36, 102, 102, 102, 62, 132, 13, 143, 37, 205, 204, 204, 60, 0, 129, 0, 0, 0, 0, 0, 127, 109, 200, 239, 63, 51, 51, 51, 62, 132, 13, 143, 37, 205, 204, 204, 60, 0, 129, 0, 0, 0, 0, 0, 127, 227, 198, 239, 63, 51, 51, 51, 62, 132, 13, 143, 37, 205, 204, 204, 188, 0, 0, 129, 0, 0, 0, 0, 127, 227, 198, 0, 60, 102, 102, 102, 62, 132, 13, 143, 37, 205, 204, 204, 188, 0, 0, 129, 0, 0, 0, 0, 127, 109, 200, 0, 60, 51, 51, 51, 62, 205, 204, 204, 61, 205, 204, 204, 188, 0, 0, 129, 0, 0, 0, 0, 127, 227, 198, 223, 193, 102, 102, 102, 62, 205, 204, 204, 61, 205, 204, 204, 188, 0, 0, 129, 0, 0, 0, 0, 127, 109, 200, 223, 193, 102, 102, 102, 62, 132, 13, 143, 37, 205, 204, 204, 60, 127, 0, 0, 0, 0, 0, 0, 127, 223, 187, 0, 60, 102, 102, 102, 62, 205, 204, 204, 61, 205, 204, 204, 60, 127, 0, 0, 0, 0, 0, 0, 127, 223, 187, 223, 193, 102, 102, 102, 62, 132, 13, 143, 37, 205, 204, 204, 188, 127, 0, 0, 0, 0, 0, 0, 127, 223, 59, 0, 60, 102, 102, 102, 62, 205, 204, 204, 61, 205, 204, 204, 188, 127, 0, 0, 0, 0, 0, 0, 127, 223, 59, 223, 193, 51, 51, 51, 62, 205, 204, 204, 61, 205, 204, 204, 60, 0, 127, 0, 0, 0, 0, 0, 127, 227, 70, 239, 63, 51, 51, 51, 62, 205, 204, 204, 61, 205, 204, 204, 188, 0, 127, 0, 0, 0, 0, 0, 127, 227, 70, 8, 36, 102, 102, 102, 62, 205, 204, 204, 61, 205, 204, 204, 60, 0, 127, 0, 0, 0, 0, 0, 127, 109, 72, 239, 63, 102, 102, 102, 62, 205, 204, 204, 61, 205, 204, 204, 188, 0, 127, 0, 0, 0, 0, 0, 127, 109, 72, 8, 36, 102, 102, 102, 190, 205, 204, 204, 61, 205, 204, 204, 60, 129, 0, 0, 0, 0, 0, 0, 127, 223, 59, 223, 193, 102, 102, 102, 190, 132, 13, 143, 37, 205, 204, 204, 60, 129, 0, 0, 0, 0, 0, 0, 127, 223, 59, 0, 60, 102, 102, 102, 190, 205, 204, 204, 61, 205, 204, 204, 188, 129, 0, 0, 0, 0, 0, 0, 127, 223, 187, 223, 193, 102, 102, 102, 190, 132, 13, 143, 37, 205, 204, 204, 188, 129, 0, 0, 0, 0, 0, 0, 127, 223, 187, 0, 60, 51, 51, 51, 190, 132, 13, 143, 37, 205, 204, 204, 60, 127, 0, 0, 0, 0, 0, 0, 127, 223, 187, 0, 60, 51, 51, 51, 190, 205, 204, 204, 61, 205, 204, 204, 60, 127, 0, 0, 0, 0, 0, 0, 127, 223, 187, 223, 193, 51, 51, 51, 190, 0, 0, 0, 0, 169, 19, 208, 37, 127, 0, 0, 0, 0, 0, 0, 127, 0, 0, 0, 60, 51, 51, 51, 190, 205, 204, 204, 61, 205, 204, 204, 188, 127, 0, 0, 0, 0, 0, 0, 127, 223, 59, 223, 193, 51, 51, 51, 190, 132, 13, 143, 37, 205, 204, 204, 188, 127, 0, 0, 0, 0, 0, 0, 127, 223, 59, 0, 60, 51, 51, 51, 190, 132, 13, 143, 37, 205, 204, 204, 60, 0, 0, 127, 0, 0, 0, 0, 127, 227, 198, 0, 60, 102, 102, 102, 190, 132, 13, 143, 37, 205, 204, 204, 60, 0, 0, 127, 0, 0, 0, 0, 127, 109, 200, 0, 60, 51, 51, 51, 190, 205, 204, 204, 61, 205, 204, 204, 60, 0, 0, 127, 0, 0, 0, 0, 127, 227, 198, 223, 193, 102, 102, 102, 190, 205, 204, 204, 61, 205, 204, 204, 60, 0, 0, 127, 0, 0, 0, 0, 127, 109, 200, 223, 193, 102, 102, 102, 190, 132, 13, 143, 37, 205, 204, 204, 188, 0, 129, 0, 0, 0, 0, 0, 127, 109, 72, 8, 36, 102, 102, 102, 190, 132, 13, 143, 37, 205, 204, 204, 60, 0, 129, 0, 0, 0, 0, 0, 127, 109, 72, 239, 63, 51, 51, 51, 190, 132, 13, 143, 37, 205, 204, 204, 188, 0, 129, 0, 0, 0, 0, 0, 127, 227, 70, 8, 36, 51, 51, 51, 190, 132, 13, 143, 37, 205, 204, 204, 60, 0, 129, 0, 0, 0, 0, 0, 127, 227, 70, 239, 63, 51, 51, 51, 190, 0, 0, 0, 0, 169, 19, 208, 37, 0, 129, 0, 0, 0, 0, 0, 127, 227, 70, 0, 60, 102, 102, 102, 190, 132, 13, 143, 37, 205, 204, 204, 188, 0, 0, 129, 0, 0, 0, 0, 127, 109, 72, 0, 60, 51, 51, 51, 190, 132, 13, 143, 37, 205, 204, 204, 188, 0, 0, 129, 0, 0, 0, 0, 127, 227, 70, 0, 60, 102, 102, 102, 190, 205, 204, 204, 61, 205, 204, 204, 188, 0, 0, 129, 0, 0, 0, 0, 127, 109, 72, 223, 193, 51, 51, 51, 190, 205, 204, 204, 61, 205, 204, 204, 188, 0, 0, 129, 0, 0, 0, 0, 127, 227, 70, 223, 193, 102, 102, 102, 190, 205, 204, 204, 61, 205, 204, 204, 188, 0, 127, 0, 0, 0, 0, 0, 127, 109, 200, 8, 36, 51, 51, 51, 190, 205, 204, 204, 61, 205, 204, 204, 188, 0, 127, 0, 0, 0, 0, 0, 127, 227, 198, 8, 36, 102, 102, 102, 190, 205, 204, 204, 61, 205, 204, 204, 60, 0, 127, 0, 0, 0, 0, 0, 127, 109, 200, 239, 63, 51, 51, 51, 190, 205, 204, 204, 61, 205, 204, 204, 60, 0, 127, 0, 0, 0, 0, 0, 127, 227, 198, 239, 63 ),
"array_index_data": PoolByteArray( 2, 0, 0, 0, 1, 0, 1, 0, 3, 0, 2, 0, 6, 0, 4, 0, 5, 0, 7, 0, 5, 0, 4, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 12,
"material": ExtResource( 2 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 60
}
surfaces/1 = {
"aabb": AABB( -0.225, 0, -0.025, 0.45, 0.1, 0.05 ),
"array_data": PoolByteArray( 51, 51, 51, 190, 0, 0, 0, 0, 169, 19, 208, 37, 0, 0, 129, 0, 0, 0, 0, 127, 227, 70, 0, 60, 51, 51, 51, 62, 0, 0, 0, 0, 169, 19, 80, 38, 0, 0, 129, 0, 0, 0, 0, 127, 227, 198, 0, 60, 51, 51, 51, 190, 154, 153, 153, 61, 169, 19, 208, 37, 0, 0, 129, 0, 0, 0, 0, 127, 227, 70, 207, 191, 51, 51, 51, 62, 154, 153, 153, 61, 169, 19, 80, 38, 0, 0, 129, 0, 0, 0, 0, 127, 227, 198, 207, 191, 51, 51, 51, 190, 154, 153, 153, 61, 169, 19, 208, 37, 0, 0, 127, 0, 0, 0, 0, 127, 227, 70, 207, 191, 51, 51, 51, 62, 0, 0, 0, 0, 169, 19, 80, 38, 0, 0, 127, 0, 0, 0, 0, 127, 227, 198, 0, 60, 51, 51, 51, 190, 0, 0, 0, 0, 169, 19, 208, 37, 0, 0, 127, 0, 0, 0, 0, 127, 227, 70, 0, 60, 51, 51, 51, 62, 154, 153, 153, 61, 169, 19, 80, 38, 0, 0, 127, 0, 0, 0, 0, 127, 227, 198, 207, 191, 51, 51, 51, 62, 205, 204, 204, 61, 205, 204, 204, 60, 129, 0, 0, 0, 0, 0, 127, 127, 223, 59, 223, 193, 51, 51, 51, 62, 132, 13, 143, 37, 205, 204, 204, 60, 129, 0, 0, 0, 0, 0, 126, 127, 223, 59, 0, 60, 51, 51, 51, 62, 205, 204, 204, 61, 205, 204, 204, 188, 129, 0, 0, 0, 0, 0, 127, 127, 223, 187, 223, 193, 51, 51, 51, 62, 0, 0, 0, 0, 169, 19, 80, 38, 129, 0, 0, 0, 0, 0, 127, 127, 0, 0, 0, 60, 51, 51, 51, 62, 132, 13, 143, 37, 205, 204, 204, 188, 129, 0, 0, 0, 0, 0, 127, 127, 223, 187, 0, 60, 102, 102, 102, 62, 132, 13, 143, 37, 205, 204, 204, 60, 0, 0, 127, 0, 127, 0, 0, 127, 109, 72, 0, 60, 51, 51, 51, 62, 132, 13, 143, 37, 205, 204, 204, 60, 0, 0, 127, 0, 127, 0, 0, 127, 227, 70, 0, 60, 102, 102, 102, 62, 205, 204, 204, 61, 205, 204, 204, 60, 0, 0, 127, 0, 127, 0, 0, 127, 109, 72, 223, 193, 51, 51, 51, 62, 205, 204, 204, 61, 205, 204, 204, 60, 0, 0, 127, 0, 127, 0, 0, 127, 227, 70, 223, 193, 51, 51, 51, 62, 132, 13, 143, 37, 205, 204, 204, 188, 0, 129, 0, 0, 129, 0, 0, 127, 227, 198, 8, 36, 51, 51, 51, 62, 0, 0, 0, 0, 169, 19, 80, 38, 0, 129, 0, 0, 129, 0, 0, 127, 227, 198, 0, 60, 102, 102, 102, 62, 132, 13, 143, 37, 205, 204, 204, 188, 0, 129, 0, 0, 129, 0, 0, 127, 109, 200, 8, 36, 102, 102, 102, 62, 132, 13, 143, 37, 205, 204, 204, 60, 0, 129, 0, 0, 129, 0, 0, 127, 109, 200, 239, 63, 51, 51, 51, 62, 132, 13, 143, 37, 205, 204, 204, 60, 0, 129, 0, 0, 129, 0, 0, 127, 227, 198, 239, 63, 51, 51, 51, 62, 132, 13, 143, 37, 205, 204, 204, 188, 0, 0, 129, 0, 129, 0, 0, 127, 227, 198, 0, 60, 102, 102, 102, 62, 132, 13, 143, 37, 205, 204, 204, 188, 0, 0, 129, 0, 129, 0, 0, 127, 109, 200, 0, 60, 51, 51, 51, 62, 205, 204, 204, 61, 205, 204, 204, 188, 0, 0, 129, 0, 129, 0, 0, 127, 227, 198, 223, 193, 102, 102, 102, 62, 205, 204, 204, 61, 205, 204, 204, 188, 0, 0, 129, 0, 129, 0, 0, 127, 109, 200, 223, 193, 102, 102, 102, 62, 132, 13, 143, 37, 205, 204, 204, 60, 127, 0, 0, 0, 0, 0, 129, 127, 223, 187, 0, 60, 102, 102, 102, 62, 205, 204, 204, 61, 205, 204, 204, 60, 127, 0, 0, 0, 0, 0, 130, 127, 223, 187, 223, 193, 102, 102, 102, 62, 132, 13, 143, 37, 205, 204, 204, 188, 127, 0, 0, 0, 0, 0, 130, 127, 223, 59, 0, 60, 102, 102, 102, 62, 205, 204, 204, 61, 205, 204, 204, 188, 127, 0, 0, 0, 0, 0, 129, 127, 223, 59, 223, 193, 51, 51, 51, 62, 205, 204, 204, 61, 205, 204, 204, 60, 0, 127, 0, 0, 127, 0, 0, 127, 227, 70, 239, 63, 51, 51, 51, 62, 205, 204, 204, 61, 205, 204, 204, 188, 0, 127, 0, 0, 127, 0, 0, 127, 227, 70, 8, 36, 102, 102, 102, 62, 205, 204, 204, 61, 205, 204, 204, 60, 0, 127, 0, 0, 127, 0, 0, 127, 109, 72, 239, 63, 102, 102, 102, 62, 205, 204, 204, 61, 205, 204, 204, 188, 0, 127, 0, 0, 127, 0, 0, 127, 109, 72, 8, 36, 102, 102, 102, 190, 205, 204, 204, 61, 205, 204, 204, 60, 129, 0, 0, 0, 0, 0, 127, 127, 223, 59, 223, 193, 102, 102, 102, 190, 132, 13, 143, 37, 205, 204, 204, 60, 129, 0, 0, 0, 0, 0, 126, 127, 223, 59, 0, 60, 102, 102, 102, 190, 205, 204, 204, 61, 205, 204, 204, 188, 129, 0, 0, 0, 0, 0, 126, 127, 223, 187, 223, 193, 102, 102, 102, 190, 132, 13, 143, 37, 205, 204, 204, 188, 129, 0, 0, 0, 0, 0, 127, 127, 223, 187, 0, 60, 51, 51, 51, 190, 132, 13, 143, 37, 205, 204, 204, 60, 127, 0, 0, 0, 0, 0, 129, 127, 223, 187, 0, 60, 51, 51, 51, 190, 205, 204, 204, 61, 205, 204, 204, 60, 127, 0, 0, 0, 0, 0, 130, 127, 223, 187, 223, 193, 51, 51, 51, 190, 0, 0, 0, 0, 169, 19, 208, 37, 127, 0, 0, 0, 0, 0, 130, 127, 0, 0, 0, 60, 51, 51, 51, 190, 205, 204, 204, 61, 205, 204, 204, 188, 127, 0, 0, 0, 0, 0, 130, 127, 223, 59, 223, 193, 51, 51, 51, 190, 132, 13, 143, 37, 205, 204, 204, 188, 127, 0, 0, 0, 0, 0, 129, 127, 223, 59, 0, 60, 51, 51, 51, 190, 132, 13, 143, 37, 205, 204, 204, 60, 0, 0, 127, 0, 127, 0, 0, 127, 227, 198, 0, 60, 102, 102, 102, 190, 132, 13, 143, 37, 205, 204, 204, 60, 0, 0, 127, 0, 127, 0, 0, 127, 109, 200, 0, 60, 51, 51, 51, 190, 205, 204, 204, 61, 205, 204, 204, 60, 0, 0, 127, 0, 127, 0, 0, 127, 227, 198, 223, 193, 102, 102, 102, 190, 205, 204, 204, 61, 205, 204, 204, 60, 0, 0, 127, 0, 127, 0, 0, 127, 109, 200, 223, 193, 102, 102, 102, 190, 132, 13, 143, 37, 205, 204, 204, 188, 0, 129, 0, 0, 129, 0, 0, 127, 109, 72, 8, 36, 102, 102, 102, 190, 132, 13, 143, 37, 205, 204, 204, 60, 0, 129, 0, 0, 129, 0, 0, 127, 109, 72, 239, 63, 51, 51, 51, 190, 132, 13, 143, 37, 205, 204, 204, 188, 0, 129, 0, 0, 129, 0, 0, 127, 227, 70, 8, 36, 51, 51, 51, 190, 132, 13, 143, 37, 205, 204, 204, 60, 0, 129, 0, 0, 129, 0, 0, 127, 227, 70, 239, 63, 51, 51, 51, 190, 0, 0, 0, 0, 169, 19, 208, 37, 0, 129, 0, 0, 127, 0, 0, 127, 227, 70, 0, 60, 102, 102, 102, 190, 132, 13, 143, 37, 205, 204, 204, 188, 0, 0, 129, 0, 129, 0, 0, 127, 109, 72, 0, 60, 51, 51, 51, 190, 132, 13, 143, 37, 205, 204, 204, 188, 0, 0, 129, 0, 129, 0, 0, 127, 227, 70, 0, 60, 102, 102, 102, 190, 205, 204, 204, 61, 205, 204, 204, 188, 0, 0, 129, 0, 129, 0, 0, 127, 109, 72, 223, 193, 51, 51, 51, 190, 205, 204, 204, 61, 205, 204, 204, 188, 0, 0, 129, 0, 129, 0, 0, 127, 227, 70, 223, 193, 102, 102, 102, 190, 205, 204, 204, 61, 205, 204, 204, 188, 0, 127, 0, 0, 127, 0, 0, 127, 109, 200, 8, 36, 51, 51, 51, 190, 205, 204, 204, 61, 205, 204, 204, 188, 0, 127, 0, 0, 127, 0, 0, 127, 227, 198, 8, 36, 102, 102, 102, 190, 205, 204, 204, 61, 205, 204, 204, 60, 0, 127, 0, 0, 127, 0, 0, 127, 109, 200, 239, 63, 51, 51, 51, 190, 205, 204, 204, 61, 205, 204, 204, 60, 0, 127, 0, 0, 127, 0, 0, 127, 227, 198, 239, 63 ),
"array_index_data": PoolByteArray( 10, 0, 8, 0, 9, 0, 9, 0, 11, 0, 10, 0, 11, 0, 12, 0, 10, 0, 15, 0, 13, 0, 14, 0, 14, 0, 16, 0, 15, 0, 19, 0, 17, 0, 18, 0, 18, 0, 20, 0, 19, 0, 20, 0, 18, 0, 21, 0, 24, 0, 22, 0, 23, 0, 23, 0, 25, 0, 24, 0, 28, 0, 26, 0, 27, 0, 27, 0, 29, 0, 28, 0, 32, 0, 30, 0, 31, 0, 31, 0, 33, 0, 32, 0, 36, 0, 34, 0, 35, 0, 35, 0, 37, 0, 36, 0, 40, 0, 38, 0, 39, 0, 39, 0, 41, 0, 40, 0, 41, 0, 42, 0, 40, 0, 45, 0, 43, 0, 44, 0, 44, 0, 46, 0, 45, 0, 49, 0, 47, 0, 48, 0, 48, 0, 50, 0, 49, 0, 50, 0, 51, 0, 49, 0, 54, 0, 52, 0, 53, 0, 53, 0, 55, 0, 54, 0, 58, 0, 56, 0, 57, 0, 57, 0, 59, 0, 58, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 84,
"material": ExtResource( 1 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 60
}

[sub_resource type="CylinderShape" id=3]
radius = 0.8
height = 0.3

[sub_resource type="DynamicFont" id=5]
size = 10
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("Spatial/Viewport")

[node name="solar" type="Area"]
script = ExtResource( 6 )

[node name="tmpParent" type="Spatial" parent="."]

[node name="solarpanel" type="MeshInstance" parent="tmpParent"]
mesh = SubResource( 1 )
material/0 = null
material/1 = null

[node name="fence2" type="MeshInstance" parent="tmpParent/solarpanel"]
transform = Transform( -0.866026, 0, -0.5, 0, 1, 0, 0.5, 0, -0.866027, -0.238, 0.2, -0.384 )
mesh = SubResource( 2 )
material/0 = null
material/1 = null

[node name="fence" type="MeshInstance" parent="tmpParent/solarpanel"]
transform = Transform( 0.866026, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866026, 0.182774, 0.2, -0.406192 )
mesh = SubResource( 2 )
material/0 = null
material/1 = null

[node name="jarst_solar_panel3" parent="tmpParent/solarpanel" instance=ExtResource( 3 )]
transform = Transform( 2.54414, 0, -1.58976, 0, 3, 0, 1.58976, 0, 2.54414, -0.0288937, 0.215238, 0.378612 )

[node name="jarst_solar_panel2" parent="tmpParent/solarpanel" instance=ExtResource( 3 )]
transform = Transform( 2.54414, 0, -1.58976, 0, 3, 0, 1.58976, 0, 2.54414, -0.112231, 0.215238, 0.0424586 )

[node name="jarst_solar_panel4" parent="tmpParent/solarpanel" instance=ExtResource( 3 )]
transform = Transform( 2.54414, 0, -1.58976, 0, 3, 0, 1.58976, 0, 2.54414, 0.279974, 0.215238, 0.277472 )

[node name="jarst_solar_panel5" parent="tmpParent/solarpanel" instance=ExtResource( 3 )]
transform = Transform( 2.54414, 0, -1.58976, 0, 3, 0, 1.58976, 0, 2.54414, 0.209212, 0.215238, -0.0960615 )

[node name="CollisionShape" parent="." instance=ExtResource( 4 )]

[node name="influence_range" type="Area" parent="." groups=[
"solar",
]]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape" type="CollisionShape" parent="influence_range"]
shape = SubResource( 3 )

[node name="Spatial" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.592379, 0 )

[node name="Viewport" type="Viewport" parent="Spatial"]
size = Vector2( 300, 30 )
transparent_bg = true

[node name="Label" type="Label" parent="Spatial/Viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
text = "HELLO THERE!"
align = 1
valign = 1

[node name="Sprite3D" type="Sprite3D" parent="Spatial"]
flip_v = true
billboard = 1
texture = SubResource( 4 )

[connection signal="mouse_entered" from="." to="." method="_on_Spatial_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Spatial_mouse_exited"]
